Fix issue #3, 'Background image cut off on home page'

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,10 +16,10 @@
 
 body {
   text-align: center;
-  background-image: url('http://www.chrisslaight.com/dev/snow-background.jpg');
+  background-image: url('http://www.chrisslaight.com/dev/paper-bg.jpg');
   background-position: center center;
-	background-repeat: no-repeat;
-	background-size: cover;
+	/* background-repeat: no-repeat;
+	background-size: cover; */
   font-family: 'Lora', serif;
   margin: 0 0 0 0;
 }
